package exceptions;

public class InvalidWordException extends Exception{
    public InvalidWordException(String message) {
        super(message);
    }
}
